--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
   },
   "dependencies": {
     "@finsweet/ts-utils": "^0.40.0",
-    "gsap": "^3.12.4"
+    "gsap": "^3.12.4",
+    "split-type": "^0.3.4",
+    "swiper": "^11.0.5"
   },
   "engines": {
     "pnpm": ">=8"
